# Data-Engineering-standard-funkionen

./: .gitignore  README.md  dataframe_analyse.py  pyproject.toml  setup.py  test.ipynb
PandasDataframeAnalysis/: dataframe_analyse.py
cli/: analyze.py
datasci_automation/core/: base.py  dataframe_analyse.py  pipeline.py
datasci_automation/models/: plsda.py
datasci_automation/preprocessing/: PCA.py  nan_imputer.py  standardize.py
datasci_automation/reporting/: summary.py
datasci_automation/unsupervised_algo/: k_means.py
